src/objects/APTS_MSPA_Ref_Number__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Is_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Ref_ID__c</fullName>
        <label>MSPA Ref ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Reference_Number__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Reference number to hold the SAP Reference for the MSPA</inlineHelpText>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>MSPA Ref Number</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Is_Used__c</columns>
        <columns>APTS_MSPA_Ref_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>MSPA Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSPA Ref Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>